--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -1,6 +1,2 @@
 [phases.setup]
-nixPkgs = ["python311", "python311Packages.pip", "cairo", "pango", "gdk-pixbuf", "libffi", "libjpeg", "zlib"]
-
-[start]
-cmd = "gunicorn app:app --bind 0.0.0.0:$PORT --workers 2 --threads 4 --timeout 120 --access-logfile - --error-logfile -"
-
+aptPkgs = ["ffmpeg"]
